--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,67 +1,216 @@
 {% load socialaccount %}
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!doctype html>
+<html lang="en">
+  <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Sign up page</title>
+    <title>Sign up</title>
   </head>
   <body>
 
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" id="color">Welcome To My Awesome Cart !!</a>
-
-<style>
-#color{ 
-  color: white;
-}
-
-</style>
-
+  <a class="navbar-brand">Welcome To My Awesome Cart !!</a>
 </nav>
 
 
+
 <style>
-.google {
-  background-color: #dd4b39;
-  color: white;
+
+.navbar-brand{
+    margin-left:20px;
+}
+
+body {
+    padding: 0;
+    margin: 0
+}
+
+#skip{
+  background-color:red;
+  color:white;
+  font-size:25px;
+  position: relative;
+  top:230px;
+}
+
+#container {
+    background-image: url("https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg");
+    width: 100%;
+    height:657px;
+}
+
+#formcontainer {
+    width: 450px;
+    height: 550px;
+    background-color: transparent;
+    position: relative;
+    top: 50px;
+    left: 35%;
+    border-radius: 8px
+}
+
+
+#cross {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: -145px;
+    left: 94%
+}
+
+#text {
+    font-size: 35px;
+    font-family: 'Roboto Slab', serif;
+    text-align: center;
+    position: relative;
+    top:165px;
+    background:#B6B4BB;
+    color:black;
+}
+
+#check {
+    position: relative;
+    top: 12px;
+    left: -66%
+}
+
+
+
+#github1{
+
+  width: 30px;
+  height: 30px;
+  position: relative;
+  left: -10%;
+  top: -2px
+}
+#google1 {
+    width: 15px;
+    height: 15px;
+    position: relative;
+    left: -10%;
+    top: -2px
+}
+
+#facebook1{
+    width:25px;
+    height:25px;
+    position: relative;
+    left: -10%;
+    top: -2px;
+}
+
+
+#facebook {
+  width: 140px;
+    height: 45px;
+    position: relative;
+    top: -80px;
+    left: -25%;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: black;
+    font-size: 19px;
+    top: 170px;
+    color: black;
+    background-color: white
+  }
+
+#github,
+#google{
+    width: 140px;
+    height: 45px;
+    position: relative;
+    top: -80px;
+    left: 12%;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: black;
+    font-size: 19px;
+    top: 100px;
+    color: black;
+    background-color: white
+}
+
+#github:hover {
+    background-color: #000000;
+    color: white;
+    transition: 0.5s
+}
+
+#facebook:hover {
+    background-color: #0000ff;
+    color: white;
+    transition: 0.5s
+}
+
+#google{
+    position: relative;
+    left: 26.5%;
+}
+
+#google:hover {
+    background-color:#F53C16;
+    color: white;
+    transition: 0.5s
+}
+
+@media only screen and (max-width:830px) {
+    #formcontainer {
+        position: relative;
+        left: 20%
+    }
+}
+
+@media only screen and (max-width:620px) {
+    #formcontainer {
+        position: relative;
+        left: 10%
+    }
+}
+
+@media only screen and (max-width:530px) {
+    #formcontainer {
+        position: relative;
+        left: 4%
+    }
 }
 </style>
 
+<body>
+    <div id="container">
+        <div id="formcontainer">
+            <p id="text">please Signup</p><br><br><br>
+            <!-- <hr style="position:relative;top:45px;height:2px; width:100%; border-width:0;"> -->
+            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="github" href="{%provider_login_url 'github' %}" method="oauth2"><img id="github1" src="https://www.influxdata.com/wp-content/uploads/GitHub-logo.jpg">Github</a> 
+
+            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="google" href="{%provider_login_url 'google' %}"><img id="google1" src="https://image.flaticon.com/icons/svg/281/281764.svg">Google</a>
+
+            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="facebook" href="{%provider_login_url 'facebook' %}"><img id="facebook1" src="https://www.vectorico.com/download/social_media/Facebook-Logo.jpg">Facebook</a>
 
 
-    <div class="container text-dark mt-5">
-        <div class="row justify-content-md-center">
-          <div class="col-md-5 bg-grey p-3">
-            <img src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" width="440px" height="280px">
-            <form class="form-signin">
-              <a href="{% provider_login_url 'google' %}" class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true"><i class="fa fa-google fa-fw"></i> Login with Google+</a>
-              <p class="mt-5 mb-3 text-muted">&copy; 2021-2022</p>
-            </form>
-            <h5><a href="/shop"><p style="margin-left:40em;position:relative;top:-80px;"><u>Skip</u></p></a></h5>
+            <a href="/shop" id="skip">Skip</a>
         </div>
-      </div>
     </div>
+</body>
 
 
+ <!-- Optional JavaScript; choose one of the two! -->
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
