--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -10,6 +10,40 @@ margin-top: 10px;
 margin-left:30px;
 }
 
+#method{
+width:40%;
+}
+
+#text{
+    margin-left:-13px;
+}
+
+#inputorder{
+    margin-top:0px;
+    margin-left: -15px;
+}
+
+#order1{
+    color:black;
+    background-color:#00FCEB;
+}
+
+
+#order2{
+    color:black;
+    background-color:#00FCEB;
+}
+
+#order1:hover{
+    color:white;
+    background-color:green;
+}
+
+#order2:hover{
+    color:white;
+    background-color:green;
+}
+
 {% endblock %}
 {% block body %}
 <div class="container">
@@ -35,6 +69,7 @@ margin-left:30px;
     <div class="col my-4">
         <h2>Enter Address & Other Details</h2>
         <b><form>
+
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="name">Name</label>
@@ -48,8 +83,6 @@ margin-left:30px;
                     <input type="email" class="form-control" id="inputEmail4" placeholder="Email" name="email">
                 </div>
             </div><br>
-
-
 
 
             <div class="form-group">
@@ -93,16 +126,81 @@ margin-left:30px;
                 <input type="tel" class="form-control" id="inputPhone" placeholder="Enter Your Phone Number" name="phone">
             </div><br>
 
+
+
+
+
+            
+                <label for="order_method">PLEASE CHOOSE METHOD OF PAYMENT</label>
+                 <select name="order_method" class="form-control" id="method">
+                    <option value="CASH ON DELIVERY">CASH ON DELIVERY</option>
+                    <option value="CARD METHOD">CARD METHOD</option>
+                 </select><br>
+
+
+
             <div class="form-group col-md-7">
-                <label for="inputorder">Your order Detail</label>
-                <input id="inputorder" class="form-control" value="name-{{product.product_name}}      price-${{product.price}}      id no.-{{product.id}}" readonly="readonly" name="order"></div></b>
+                <label for="inputorder" id="text">Your order Detail</label>
+                <input id="inputorder" class="form-control" value="name-{{product.product_name}}      price-${{product.price}}      id no.-{{product.id}}" readonly="readonly" name="order"></div></b><br>
 
 
 
-            <button type="submit" class="btn btn-primary">Place Order</button>
-        </form>
+
+
+
+
+{% if user.is_authenticated %}
+            <a type="button" class="btn btn-dark" data-toggle="modal" data-target="#order" id="order1">
+            Place Order
+            </a>
+
+            <div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">ADVISE</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    PLEASE CHECK THE DETAILS CAREFULLY.
+                  </div>
+                  <div class="modal-footer">
+                    <button type="submit" class="btn btn-secondary">Submit</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+{% else %}
+
+<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#order" id="order2">
+Place Order
+</button>
+
+<div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">please sign up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        PLEASE Signup
+      </div>
+      <div class="modal-footer">
+        <a type="button" href="/" class="btn btn-secondary" >Signup/Login</a>
+      </div>
     </div>
+  </div>
 </div>
+{% endif %}
 
 
+
+
+
+                    
 {%endblock %}
