--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -43,7 +43,7 @@ body {
 #container {
     background-image: url("https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg");
     width: 100%;
-    height:657px;
+    height:100%;
 }
 
 #formcontainer {
