--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -20,10 +20,18 @@
 </nav>
 
 
-<div class="bg-image" style="
-      background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.webp');
-      height: 100vh;
+<!-- Jumbotron -->
+<div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="
+      background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
     ">
+  <h1 class="mb-3 h2">Jumbotron</h1>
+
+  <p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+    praesentium labore accusamus sequi, voluptate debitis tenetur in deleniti
+    possimus modi voluptatum neque maiores dolorem unde? Aut dolorum quod
+    excepturi fugit.
+  </p>
 
 
 <style>
