--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,8 +22,7 @@
 
 <!-- Jumbotron -->
 <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="
-      background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
-    ">
+      background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');">
   <h1 class="mb-3 h2">Jumbotron</h1>
 
   <p>
@@ -31,11 +30,7 @@
     praesentium labore accusamus sequi, voluptate debitis tenetur in deleniti
     possimus modi voluptatum neque maiores dolorem unde? Aut dolorum quod
     excepturi fugit.
-  </p>
-
-
-
-<body>
+    <body>
     <div id="container">
         <div id="formcontainer">
             <p id="text">please Signup</p><br><br><br>
@@ -51,8 +46,6 @@
         </div>
     </div>
 </body>
-
-
 
 
 <style>
@@ -212,6 +205,8 @@ body {
     }
 }
 </style>
+
+</p>
 
 </div>
 
