--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,225 +1,28 @@
-{% load socialaccount %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<header class="row visible">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <div class="grid_12 visible">
+        <div class="row logo-wrap">
 
-    <title>Sign up</title>
-  </head>
-  <body>
-
-
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand">Welcome To My Awesome Cart !!</a>
-</nav>
-
-
-<!-- Jumbotron -->
-<div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="
-      background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');">
-  <h1 class="mb-3 h2">Jumbotron</h1>
-
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
-    praesentium labore accusamus sequi, voluptate debitis tenetur in deleniti
-    possimus modi voluptatum neque maiores dolorem unde? Aut dolorum quod
-    excepturi fugit.
-    <body>
-    <div id="container">
-        <div id="formcontainer">
-            <p id="text">please Signup</p><br><br><br>
-            <!-- <hr style="position:relative;top:45px;height:2px; width:100%; border-width:0;"> -->
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="github" href="{%provider_login_url 'github' %}" method="oauth2"><img id="github1" src="https://www.influxdata.com/wp-content/uploads/GitHub-logo.jpg">Github</a> 
-
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="google" href="{%provider_login_url 'google' %}"><img id="google1" src="https://image.flaticon.com/icons/svg/281/281764.svg">Google</a>
-
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="facebook" href="{%provider_login_url 'facebook' %}"><img id="facebook1" src="https://www.vectorico.com/download/social_media/Facebook-Logo.jpg">Facebook</a>
-
-
-            <a href="/shop" id="skip">Skip</a>
-        </div>
-    </div>
-</body>
-
+            <!-- logo -->
+                        <div class="grid_6">
+                <div id="logo">
+                    <a href="http://dev.jzm.co.nz/mytime/"><img src="https://mdbootstrap.com/img/new/slides/003.jpg" title="My Time Candles" alt="My Time Candles" /></a>
+                </div>
+            </div>
 
 <style>
-
-.navbar-brand{
-    margin-left:20px;
-}
-
-body {
-    padding: 0;
-    margin: 0
-}
-
-#skip{
-  background-color:red;
-  color:white;
-  font-size:25px;
-  position: relative;
-  top:230px;
-
-}
-
-#formcontainer {
-    width: 450px;
-    height: 550px;
-    background-color: transparent;
-    position: relative;
-    top: 50px;
-    left: 35%;
-    border-radius: 8px
-}
-
-
-#cross {
-    width: 20px;
-    height: 20px;
-    position: relative;
-    top: -145px;
-    left: 94%
-}
-
-#text {
-    font-size: 35px;
-    font-family: 'Roboto Slab', serif;
-    text-align: center;
-    position: relative;
-    top:165px;
-    background:#B6B4BB;
-    color:black;
-}
-
-#check {
-    position: relative;
-    top: 12px;
-    left: -66%
-}
-
-
-
-#github1{
-
-  width: 30px;
-  height: 30px;
-  position: relative;
-  left: -10%;
-  top: -2px
-}
-#google1 {
-    width: 15px;
-    height: 15px;
-    position: relative;
-    left: -10%;
-    top: -2px
-}
-
-#facebook1{
-    width:25px;
-    height:25px;
-    position: relative;
-    left: -10%;
-    top: -2px;
-}
-
-
-#facebook {
-  width: 140px;
-    height: 45px;
-    position: relative;
-    top: -80px;
-    left: -25%;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: black;
-    font-size: 19px;
-    top: 170px;
-    color: black;
-    background-color: white
-  }
-
-#github,
-#google{
-    width: 140px;
-    height: 45px;
-    position: relative;
-    top: -80px;
-    left: 12%;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: black;
-    font-size: 19px;
-    top: 100px;
-    color: black;
-    background-color: white
-}
-
-#github:hover {
-    background-color: #000000;
-    color: white;
-    transition: 0.5s
-}
-
-#facebook:hover {
-    background-color: #0000ff;
-    color: white;
-    transition: 0.5s
-}
-
-#google{
-    position: relative;
-    left: 26.5%;
-}
-
-#google:hover {
-    background-color:#F53C16;
-    color: white;
-    transition: 0.5s
-}
-
-@media only screen and (max-width:830px) {
-    #formcontainer {
-        position: relative;
-        left: 20%
-    }
-}
-
-@media only screen and (max-width:620px) {
-    #formcontainer {
-        position: relative;
-        left: 10%
-    }
-}
-
-@media only screen and (max-width:530px) {
-    #formcontainer {
-        position: relative;
-        left: 4%
-    }
+#search{
+  text-align: center;
 }
 </style>
+            <!-- search -->
+            <div class="grid_6 visible">
+                <div id="search">
+                    <div class="button-search">Search</div>
+                                        <input type="text" name="filter_name" value="Search ... " onclick="this.value = '';" onkeydown="this.style.color = '#000000';" />
+                                    </div><!--/search-->
+            </div>
 
-</p>
-
-</div>
-
-
- <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+        </div><!--/row-->  
+    </div><!--/grid_12-->
+</header><!--End Header-->
