--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -14,6 +14,14 @@
 #search{
   text-align: center;
 }
+#logo{
+  width: 100%;
+  max-width: 300px; /* Original width of the logo image */ 
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  float: left;
+}
 </style>
             <!-- search -->
             <div class="grid_6 visible">
