--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,6 @@
 <div id="container-top">
     <div id="logo">
-        <a href="http://dev.jzm.co.nz/mytime/"><img src="http://dev.jzm.co.nz/mytime/image/data/logo-black-web.png" title="My Time Candles" alt="My Time Candles"></a>
+        <a href="http://dev.jzm.co.nz/mytime/"><img src="https://mdbootstrap.com/img/new/slides/003.jpg" title="My Time Candles" alt="My Time Candles"></a>
     </div>
 <!-- search -->
     <div id="search" class="visible">
