--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,25 +1,23 @@
-<div id="container-top">
-    <div id="logo">
-        <a href="http://dev.jzm.co.nz/mytime/"><img src="https://mdbootstrap.com/img/new/slides/003.jpg" title="My Time Candles" alt="My Time Candles"></a>
-    </div>
-<!-- search -->
-    <div id="search" class="visible">
-        <div class="button-search">Search</div>
-        <input type="text" name="filter_name" value="Search ... " onclick="this.value = '';" onkeydown="this.style.color = '#000000';">
-    </div>
-<!--/search-->
+<html>
+<head>
+  <title>Hello world</title>
+</head>
+<body>
+
+<div class="container">
+  <p>hello</p>
 </div>
 
 <style>
-#container-top{
-    position: relative;
-}
-
-#search{
-    top: 15%;
-    right: 0;
-}
-#logo{
-    margin:0 auto;
+div {
+  height: 100%;
+  max-width:100%;
+  background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
+  background-repeat: no-repeat;
+  background-size:2000px
 }
 </style>
+
+
+</body>
+</html>
