--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,10 +11,12 @@
 <style>
 div {
   height: 100%;
-  max-width:100%;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
   background-repeat: no-repeat;
-  background-size:2000px
+  background-size: 200%
 }
 </style>
 
