--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,14 +10,25 @@
 
 <style>
 div {
-  height: 100%;
   width: 100%;
-  max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
   background-repeat: no-repeat;
-  background-size: 200%
 }
+
+/* For width smaller than 400px: */
+body {
+  background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
+}
+
+/* For width 400px and larger: */
+@media only screen and (min-width: 400px) {
+  body {
+    background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
+  }
+}
+
+
 </style>
 
 
