--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -21,6 +21,8 @@ div {
 @media only screen and (min-width: 400px) {
   body {
     background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
+    width: 100%;
+    height: 100%;
   }
 }
 
