--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Hello world</title>
 </head>
 <body>
@@ -9,21 +11,17 @@
 </div>
 
 <style>
-div {
+/*div {
   width: 100%;
   height: 100%;
   background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
   background-repeat: no-repeat;
-}
+}*/
 
+body {
+  background-repeat: no-repeat;
+  background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
 
-/* For width 400px and larger: */
-@media only screen and (min-width: 400px) {
-  body {
-    background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
-    width: 100%;
-    height: 100%;
-  }
 }
 
 
