--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -24,6 +24,12 @@ body {
 
 }
 
+@media only screen and (min-width: 400px) {
+  body { 
+    background-repeat: no-repeat;
+    background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg'); 
+  }
+
 
 </style>
 
