--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -20,19 +20,20 @@
 
 body {
   background-repeat: no-repeat;
-  background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');
+  background-image: url('https://ibb.co/V91qBVQ');
 
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width:400px) {
   body { 
-    background-repeat: no-repeat;
-    background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg'); 
+    background-size: 1370px;
+    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
   }
 
 
 </style>
 
+<img src="https://i.ibb.co/H4SHg7x/imgonline-com-ua-resize-HHOH87-JLMRqj-ZF8.jpg" alt="imgonline-com-ua-resize-HHOH87-JLMRqj-ZF8" border="0">
 
 </body>
 </html>
