--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,6 +10,8 @@
   <p>hello</p>
 </div>
 
+<img src="https://ibb.co/V91qBVQ">
+
 <style>
 /*div {
   width: 100%;
@@ -32,8 +34,6 @@ body {
 
 
 </style>
-
-<img src="https://i.ibb.co/H4SHg7x/imgonline-com-ua-resize-HHOH87-JLMRqj-ZF8.jpg" alt="imgonline-com-ua-resize-HHOH87-JLMRqj-ZF8" border="0">
 
 </body>
 </html>
