--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,8 +10,6 @@
   <p>hello</p>
 </div>
 
-<img src="https://ibb.co/V91qBVQ">
-
 <style>
 /*div {
   width: 100%;
@@ -22,7 +20,7 @@
 
 body {
   background-repeat: no-repeat;
-  background-image: url('https://ibb.co/V91qBVQ');
+  background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg');
 
 }
 
