--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -20,7 +20,7 @@
 
 body {
   background-repeat: no-repeat;
-  background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg');
+  background-image: url('https://st4.depositphotos.com/8186610/23160/i/600/depositphotos_231601722-stock-photo-bright-pink-wool-balls-shopping.jpg');
 
 }
 
