--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -12,12 +12,11 @@
     <title>Sign up</title>
   </head>
   <body>
-
-
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand">Welcome To My Awesome Cart !!</a>
 </nav>
+
+<div class="container">
 
     <div id="container">
         <div id="formcontainer">
@@ -213,17 +212,28 @@ body {
 
 
 </style>
+</div>
+
+<style>
+
+.container{
+  text-align: center;
+}
+
+body {
+  background-repeat: no-repeat;
+  background-image: url('https://st4.depositphotos.com/8186610/23160/i/600/depositphotos_231601722-stock-photo-bright-pink-wool-balls-shopping.jpg');
+
+}
+
+@media only screen and (min-width:400px) {
+  body { 
+    background-size: 1370px;
+    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
+  }
 
 
- <!-- Optional JavaScript; choose one of the two! -->
+</style>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
 </html>
