--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,239 +1,128 @@
 {% load socialaccount %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title>Responsive login form with social media login buttons</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+<div class="login-form">
+  <form>
+    <h2>Login</h2>
+    <input type="email" placeholder="Username or email id" name="username" required>
+    <input type="password" placeholder="Enter password" name="psw" required>
+    <button type="submit">Login</button>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <label class="remember-me"><input type="checkbox" name="remember">Remember me</label>
+    <span class="forget-psw">Forgot <a href="#">password?</a></span>
 
-    <title>Sign up</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand">Welcome To My Awesome Cart !!</a>
-</nav>
-
-<div class="container">
-
-    <div id="container">
-        <div id="formcontainer">
-            <p id="text">please Signup</p><br><br><br>
-            <!-- <hr style="position:relative;top:45px;height:2px; width:100%; border-width:0;"> -->
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="github" href="{%provider_login_url 'github' %}" method="oauth2"><img id="github1" src="https://www.influxdata.com/wp-content/uploads/GitHub-logo.jpg">Github</a> 
-
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="google" href="{%provider_login_url 'google' %}"><img id="google1" src="https://image.flaticon.com/icons/svg/281/281764.svg">Google</a>
-
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="facebook" href="{%provider_login_url 'facebook' %}"><img id="facebook1" src="https://www.vectorico.com/download/social_media/Facebook-Logo.jpg">Facebook</a>
-
-
-            <a href="/shop" id="skip">Skip</a>
-        </div>
+    <div class="social-btn">
+      <button type="submit" class="twitter-btn"><i class="fa fa-twitter" aria-hidden="true"></i> Login with Twitter</button>
+      <button type="submit" class="facebook-btn"><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button>
     </div>
-</body>
-
-
-<style>
-
-.navbar-brand{
-    margin-left:20px;
-}
-
-body {
-    padding: 0;
-    margin: 0
-}
-
-#skip{
-  background-color:red;
-  color:white;
-  font-size:25px;
-  position: relative;
-  top:230px;
-
-}
-
-#formcontainer {
-    width: 450px;
-    height: 550px;
-    background-color: transparent;
-    position: relative;
-    top: 50px;
-    left: 35%;
-    border-radius: 8px
-}
-
-
-#cross {
-    width: 20px;
-    height: 20px;
-    position: relative;
-    top: -145px;
-    left: 94%
-}
-
-#text {
-    font-size: 35px;
-    font-family: 'Roboto Slab', serif;
-    text-align: center;
-    position: relative;
-    top:165px;
-    background:#B6B4BB;
-    color:black;
-}
-
-#check {
-    position: relative;
-    top: 12px;
-    left: -66%
-}
-
-
-
-#github1{
-
-  width: 30px;
-  height: 30px;
-  position: relative;
-  left: -10%;
-  top: -2px
-}
-#google1 {
-    width: 15px;
-    height: 15px;
-    position: relative;
-    left: -10%;
-    top: -2px
-}
-
-#facebook1{
-    width:25px;
-    height:25px;
-    position: relative;
-    left: -10%;
-    top: -2px;
-}
-
-
-#facebook {
-  width: 140px;
-    height: 45px;
-    position: relative;
-    top: -80px;
-    left: -25%;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: black;
-    font-size: 19px;
-    top: 170px;
-    color: black;
-    background-color: white
-  }
-
-#github,
-#google{
-    width: 140px;
-    height: 45px;
-    position: relative;
-    top: -80px;
-    left: 12%;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: black;
-    font-size: 19px;
-    top: 100px;
-    color: black;
-    background-color: white
-}
-
-#github:hover {
-    background-color: #000000;
-    color: white;
-    transition: 0.5s
-}
-
-#facebook:hover {
-    background-color: #0000ff;
-    color: white;
-    transition: 0.5s
-}
-
-#google{
-    position: relative;
-    left: 26.5%;
-}
-
-#google:hover {
-    background-color:#F53C16;
-    color: white;
-    transition: 0.5s
-}
-
-@media only screen and (max-width:830px) {
-    #formcontainer {
-        position: relative;
-        left: 20%
-    }
-}
-
-@media only screen and (max-width:620px) {
-    #formcontainer {
-        position: relative;
-        left: 10%
-    }
-}
-
-@media only screen and (max-width:530px) {
-    #formcontainer {
-        position: relative;
-        left: 4%
-    }
-}
-</style>
-<style>
-
-.container{
-  text-align: center;
-}
-
-body {
-  background-repeat: no-repeat;
-  background-image: url('https://st4.depositphotos.com/8186610/23160/i/600/depositphotos_231601722-stock-photo-bright-pink-wool-balls-shopping.jpg');
-
-}
-
-@media only screen and (min-width:400px) {
-  body { 
-    background-size: 1370px;
-    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
-  }
-
-
-</style>
+  </form>
 </div>
-
-<style>
-
-.container{
-  text-align: center;
-}
-
-body {
-  background-repeat: no-repeat;
-  background-image: url('https://st4.depositphotos.com/8186610/23160/i/600/depositphotos_231601722-stock-photo-bright-pink-wool-balls-shopping.jpg');
-
-}
-
-@media only screen and (min-width:400px) {
-  body { 
-    background-size: 1370px;
-    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
-  }
-
-
-</style>
-
 </body>
 </html>
+<style type="text/css">
+body {
+  background-repeat: no-repeat;
+  background-image: url('https://st4.depositphotos.com/8186610/23160/i/600/depositphotos_231601722-stock-photo-bright-pink-wool-balls-shopping.jpg');
+
+}
+
+@media only screen and (min-width:400px) {
+  body { 
+    background-size: 1370px;
+    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
+  }
+
+.login-form {
+    font-family: arial;
+    color: #333;
+} 
+.login-form form {
+    width: 500px;
+    position: relative;
+    top: 50px;
+    margin: 0 auto;
+    padding: 20px 30px 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #ffffff;
+}
+.login-form h2 {
+    text-align: center;
+    font-size: 35px;
+    margin: 10px 0px 40px;
+}
+.login-form input {
+    width: 100%;
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+    height: 40px;
+    margin: 0px 0px 0px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 17px;
+}
+.login-form button {
+    margin: 10px auto 30px;
+    display: table;
+    font-size: 20px;
+    padding: 10px 30px;
+    background-color: #4CAF50;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.login-form button:hover{
+  opacity: 0.8;
+}
+.login-form input[type="checkbox"] {
+    height: 16px;
+    width: 16px;
+    margin-right: 5px;
+    float: left;
+}
+.login-form .forget-psw {
+    float: right;
+}
+.login-form .forget-psw a {
+    color: #2196F3;
+    text-decoration: none;
+}
+.social-btn button.twitter-btn, .social-btn button.facebook-btn {
+    width: 100%;
+    font-size: 18px;
+    margin: 0px 0px 10px;
+}
+.social-btn button.twitter-btn{
+  background-color: #26abfd;
+}
+.social-btn button.facebook-btn{
+  background-color: #3f68be;
+}
+.social-btn {
+    border-top: 1px solid #ddd;
+    padding-top: 30px;
+    margin-top: 30px;
+}
+.social-btn button i {
+    margin-right: 5px;
+    font-size: 20px;
+}
+@media (max-width: 767px){
+.login-form form {
+    width: 90%;
+    padding: 20px 15px 20px;
+}
+.social-btn button.twitter-btn, .social-btn button.facebook-btn {
+    font-size: 15px;
+}
+} 
+</style>
