--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,7 +1,8 @@
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Responsive login form with social media login buttons</title>
+  <title>LOGIN/SIGNUP</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -9,17 +10,10 @@
 <body>
 <div class="login-form">
   <form>
-    <h2>Login</h2>
-    <input type="email" placeholder="Username or email id" name="username" required>
-    <input type="password" placeholder="Enter password" name="psw" required>
-    <button type="submit">Login</button>
-
-    <label class="remember-me"><input type="checkbox" name="remember">Remember me</label>
-    <span class="forget-psw">Forgot <a href="#">password?</a></span>
-
+    <h2>Please Login</h2>
     <div class="social-btn">
-      <button type="submit" class="twitter-btn"><i class="fa fa-twitter" aria-hidden="true"></i> Login with Twitter</button>
-      <button type="submit" class="facebook-btn"><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button>
+      <button type="submit" class="twitter-btn"><a href="{% provider_login_url 'google' %}"></a><i class="fa fa-google" aria-hidden="true"></i> Login with Google</button>
+      <button type="submit" class="facebook-btn"><a href="{% provider_login_url 'facebook' %}"></a><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button>
     </div>
   </form>
 </div>
@@ -27,7 +21,8 @@
 </html>
 <style type="text/css">
 body {
-  background-image: url('https://st4.depositphotos.com/8186610/23160/i/600/depositphotos_231601722-stock-photo-bright-pink-wool-balls-shopping.jpg');
+    background-size: 1370px;
+    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg');
 
 }
 .login-form {
@@ -93,7 +88,7 @@ body {
     margin: 0px 0px 10px;
 }
 .social-btn button.twitter-btn{
-  background-color: #26abfd;
+  background-color: red;
 }
 .social-btn button.facebook-btn{
   background-color: #3f68be;
