--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,9 +9,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<style>
+#nav{
+    color:white;
+}
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" color="white">My Awesome Cart</a>
+  <a class="navbar-brand" id="nav">My Awesome Cart</a>
  </nav> 
 
 <div class="login-form">
@@ -38,7 +43,7 @@ body {
 .login-form form {
     width: 500px;
     position: relative;
-    top: 150px;
+    top: 110px;
     margin: 0 auto;
     padding: 20px 30px 20px;
     border: 1px solid #ddd;
