--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -122,7 +122,7 @@ body {
 
       <a href="{% provider_login_url 'google' %}" style="text-decoration:none"><button type="button" class="twitter-btn"><i class="fa fa-google" aria-hidden="true"></i>Login with Google</button></a>
 
-      <a href="{% provider_login_url 'facebook' %}" style="text-decoration:none"><button type="button" class="facebook-btn"><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button></a>
+      <a href="{% provider_login_url 'facebook' %}" style="text-decoration:none"><button type="button" class="facebook-btn"><i class="fa fa-facebook" aria-hidden="true"></i>with Facebook</button></a>
 
       <a href="/shop" class="btn btn-danger" type="button">skip</a>
     </div>
