--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -113,6 +113,7 @@ body {
 .social-btn button.twitter-btn, .social-btn button.facebook-btn {
     font-size: 20px;
     padding-right:80px;
+    white-space: nowrap
 }
 }
 </style>
