--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -70,9 +70,11 @@
 }
 </style>
 
-<button type="button" data-toggle="modal" data-target="#contact" id="button">
+<li class="nav-item active">
+<button class="nav-link" type="button" data-toggle="modal" data-target="#contact" id="button">
   Contact Us
 </button>
+</li>
 
 <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -124,9 +126,11 @@
 }
 </style>
 
-<button type="button" data-toggle="modal" data-target="#product" id="product_button">
+<li class="nav-item active">
+<button class="nav-link" type="button" data-toggle="modal" data-target="#product" id="product_button">
   Sell Your Product
 </button>
+</li>
 
 <div class="modal fade" id="product" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
