--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -54,6 +54,7 @@
 
 
 
+
 {% if user.is_authenticated %}
       <li class="nav-item active">
         <a class="nav-link" href="/shop/contact">Contact Us</a>
@@ -70,9 +71,11 @@
 }
 </style>
 
-<button type="button" data-toggle="modal" data-target="#contact" id="button">
+<li class="nav-item active">
+<button class="nav-link" type="button" data-toggle="modal" data-target="#contact" id="button">
   Contact Us
 </button>
+</li>
 
 <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -124,9 +127,11 @@
 }
 </style>
 
-<button type="button" data-toggle="modal" data-target="#product" id="product_button">
+<li class="nav-item active">
+<button class="nav-link" type="button" data-toggle="modal" data-target="#product" id="product_button">
   Sell Your Product
 </button>
+</li>
 
 <div class="modal fade" id="product" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -182,9 +187,10 @@
 
   {% if user.is_authenticated %}
 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="droplist">
+  <li><a class="dropdown-item" href="/shop/view"><p style="color:black;"><b>change view</b></p></a></li>
+  <li><a class="dropdown-item" href="/shop/vieworder"><p style="color:black;"><b>My Orders</b></p></a></li>
   <li><a class="dropdown-item" href="/"><p style="color:black;"><b>Login with another account</b></p></a></li>
   <li><a class="dropdown-item" href="/signout"><p style="color:black;"><b>Logout</b></p></a></li>
-  <li><a class="dropdown-item" href="/shop/view"><p style="color:black;"><b>change view</b></p></a></li>
   </ul>
 
 
@@ -277,7 +283,8 @@
 
 </div>
 </nav>
-{% block body %} {% endblock %}
+{% block body %}
+{% endblock %}
 
 
 
