--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,216 +1,186 @@
 {% load socialaccount %}
-<!doctype html>
+
+{%block body%}
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Sign up</title>
-  </head>
-  <body>
-
+<head>
+  <title>Login/Signup</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand">Welcome To My Awesome Cart !!</a>
+<a class="navbar-brand" id="nav">Welcome To My Awesome Cart !!</a>
 </nav>
+
+
+<style type="text/css">
+
+#nav{
+    color: white;
+}
+
+body {
+    background-color: #fbfbfb;
+    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
+}
+.login-form {
+    font-family: arial;
+    color: #333;
+} 
+.login-form form {
+    width: 500px;
+    position: relative;
+    top: 100px;
+    margin: 0 auto;
+    padding: 20px 30px 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #ffffff;
+}
+.login-form h2 {
+    text-align: center;
+    font-size: 35px;
+    margin: 10px 0px 40px;
+}
+.login-form input {
+    width: 100%;
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+    height: 45px;
+    margin: 0px 0px 20px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 17px;
+}
+.login-form button {
+    margin: 10px auto 30px;
+    display: table;
+    font-size: 20px;
+    padding: 10px 30px;
+    background-color: #4CAF50;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.login-form button:hover{
+  opacity: 0.8;
+}
+.login-form input[type="checkbox"] {
+    height: 16px;
+    width: 16px;
+    margin-right: 5px;
+    float: left;
+}
+.login-form .forget-psw {
+    float: right;
+}
+.login-form .forget-psw a {
+    color: #2196F3;
+    text-decoration: none;
+}
+.social-btn button.twitter-btn, .social-btn button.facebook-btn, .social-btn button.github-btn {
+    width: 100%;
+    font-size: 22px;
+    margin: 0px 0px 10px;
+}
+.social-btn button.twitter-btn{
+  background-color: red;
+}
+.social-btn button.facebook-btn{
+  background-color: #3f68be;
+  
+}
+.social-btn button.github-btn{
+  background-color: black;
+  
+}
+.social-btn {
+    padding-top: -5px;
+    margin-top: 20px;
+}
+.social-btn button i {
+    margin-right: 5px;
+}
+@media (max-width: 767px){
+.login-form form {
+    position: relative;
+    top: 60px;
+    width: 90%;
+    padding: 20px 15px 20px;
+}
+.social-btn button.twitter-btn, .social-btn button.facebook-btn, .social-btn button.github-btn {
+    font-size: 20px;
+    padding-right:80px;
+    white-space: nowrap
+}
+}
+</style>
+
+
+
+<div class="login-form">
+  <form>
+    <h2>Login</h2>
+    <div class="social-btn">
+
+      <a href="{% provider_login_url 'google' method='js_sdk' %} " style="text-decoration:none"><button type="button" class="twitter-btn"><i class="fa fa-google" aria-hidden="true"></i>Login with Google</button></a>
+
 
 
 
 <style>
-
-.navbar-brand{
-    margin-left:20px;
-}
-
-body {
-    padding: 0;
-    margin: 0
-}
-
-#skip{
-  background-color:red;
-  color:white;
-  font-size:25px;
-  position: relative;
-  top:230px;
-}
-
-#container {
-    background-image: url("https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg");
-    width: 100%;
-    height:657px;
-}
-
-#formcontainer {
-    width: 450px;
-    height: 550px;
-    background-color: transparent;
-    position: relative;
-    top: 50px;
-    left: 35%;
-    border-radius: 8px
-}
-
-
-#cross {
-    width: 20px;
-    height: 20px;
-    position: relative;
-    top: -145px;
-    left: 94%
-}
-
-#text {
-    font-size: 35px;
-    font-family: 'Roboto Slab', serif;
-    text-align: center;
-    position: relative;
-    top:165px;
-    background:#B6B4BB;
-    color:black;
-}
-
-#check {
-    position: relative;
-    top: 12px;
-    left: -66%
-}
-
-
-
-#github1{
-
-  width: 30px;
-  height: 30px;
-  position: relative;
-  left: -10%;
-  top: -2px
-}
-#google1 {
-    width: 15px;
-    height: 15px;
-    position: relative;
-    left: -10%;
-    top: -2px
-}
-
-#facebook1{
-    width:25px;
-    height:25px;
-    position: relative;
-    left: -10%;
-    top: -2px;
-}
-
-
-#facebook {
-  width: 140px;
-    height: 45px;
-    position: relative;
-    top: -80px;
-    left: -25%;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: black;
-    font-size: 19px;
-    top: 170px;
-    color: black;
-    background-color: white
-  }
-
-#github,
-#google{
-    width: 140px;
-    height: 45px;
-    position: relative;
-    top: -80px;
-    left: 12%;
-    border-radius: 5px;
-    border-width: 1px;
-    border-color: black;
-    font-size: 19px;
-    top: 100px;
-    color: black;
-    background-color: white
-}
-
-#github:hover {
-    background-color: #000000;
-    color: white;
-    transition: 0.5s
-}
-
-#facebook:hover {
-    background-color: #0000ff;
-    color: white;
-    transition: 0.5s
-}
-
-#google{
-    position: relative;
-    left: 26.5%;
-}
-
-#google:hover {
-    background-color:#F53C16;
-    color: white;
-    transition: 0.5s
-}
-
-@media only screen and (max-width:830px) {
-    #formcontainer {
-        position: relative;
-        left: 20%
-    }
-}
-
-@media only screen and (max-width:620px) {
-    #formcontainer {
-        position: relative;
-        left: 10%
-    }
-}
-
-@media only screen and (max-width:530px) {
-    #formcontainer {
-        position: relative;
-        left: 4%
-    }
+#product_button {     
+    background-color: blue;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden; 
+    color: white;       
 }
 </style>
 
-<body>
-    <div id="container">
-        <div id="formcontainer">
-            <p id="text">please Signup</p><br><br><br>
-            <!-- <hr style="position:relative;top:45px;height:2px; width:100%; border-width:0;"> -->
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="github" href="{%provider_login_url 'github' %}" method="oauth2"><img id="github1" src="https://www.influxdata.com/wp-content/uploads/GitHub-logo.jpg">Github</a> 
-
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="google" href="{%provider_login_url 'google' %}"><img id="google1" src="https://image.flaticon.com/icons/svg/281/281764.svg">Google</a>
-
-            <a class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true" id="facebook" href="{%provider_login_url 'facebook' %}"><img id="facebook1" src="https://www.vectorico.com/download/social_media/Facebook-Logo.jpg">Facebook</a>
-
-
-            <a href="/shop" id="skip">Skip</a>
-        </div>
+<button type="button" class="facebook-btn" id="product_button" type="button" data-toggle="modal" data-target="#product"><i class="fa fa-facebook" aria-hidden="true" ></i>Login with Facebook</button>
+<form action="/" method="POST">{% csrf_token %}
+<div class="modal fade" id="product" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Please,Enter your Email Address</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <label for="inputState">Email-Address</label>
+        <input type="text" class="form-control" id="inputState" placeholder="Enter Your Email" name="email">
+      </div>
+      <div class="modal-footer">
+        <a href="{% provider_login_url 'facebook' %}" class="btn btn-secondary">Submit</a>
+      </div>
     </div>
+  </div>
+</div>
+
+
+
+      <a href="{% provider_login_url 'github' %}" style="text-decoration:none"><button type="button" class="github-btn"><i class="fa fa-github" aria-hidden="true"></i>Login with Github</button></a>
+
+      <a href="/shop" class="btn btn-danger" type="button">skip</a>
+    </div>
+  </form>
+</div>
+
+ <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-
-
- <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
 </html>
+{%endblock%}
