--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -126,7 +126,7 @@ body {
 
 <div class="login-form">
   <form>
-    <h2>Login</h2>
+    <h2><b><u>Please Login</u></b></h2>
     <div class="social-btn">
 
       <a href="{% provider_login_url 'google' method='js_sdk' %} " style="text-decoration:none"><button type="button" class="twitter-btn"><i class="fa fa-google" aria-hidden="true"></i>Login with Google</button></a>
