--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -28,7 +28,7 @@
 
         <a href="/shop/productview/{{order.order_id}}"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-primary mx-3">View Product</button></p></a>
 
-		<a href="/shop/productview/{{order.order_id}}" type="button" data-toggle="modal" data-target="#order"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
+		<a type="button" data-toggle="modal" data-target="#order"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
 
 
 				            <div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
