--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -143,13 +143,13 @@ width:40%;
 
 
             <div class="form-group col-md-7">
-                <label for="inputorder" id="text">Your order ID</label>
-                <input id="inputorder" class="form-control" value="{{product.id}}" readonly="readonly" name="order_id"></div></b>
+                <label for="inputorder" id="text">Your Product ID</label>
+                <input id="inputorder" class="form-control" value="{{product.id}}" readonly="readonly" name="product_id"></div></b>
 
 
 
             <div class="form-group col-md-7">
-                <input type="hidden" id="inputorder" class="form-control" value="{{request.user.id}}" readonly="readonly" name="order_uid"></div></b><br>
+                <input type="hidden" id="inputorder" class="form-control" value="{{request.user.id}}" readonly="readonly" name="user_uid"></div></b><br>
 
 
 
