--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -44,7 +44,7 @@
 		                    Are You Sure To Cancel This Order?</b>
 		                  </div>
 		                  <div class="modal-footer">
-		                    <a href="/shop/delete/{{order.order_id}}"><button class="btn btn-danger mx-3">Yes,I am Sure</button></a>
+		                    <a href="/shop/delete/{{order.product_id}}"><button class="btn btn-danger mx-3">Yes,I am Sure</button></a>
 		                  </div>
 		                </div>
 		              </div>
