--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -26,7 +26,7 @@
         
         <h5 id="img"><b>Price:-</b>${{order.product_price}}</h5><br>
 
-        <a href="/shop/productview/{{order.order_id}}"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-primary mx-3">View Product</button></p></a>
+        <a href="/shop/productview/{{order.product_id}}"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-primary mx-3">View Product</button></p></a>
 
 		<a type="button" data-toggle="modal" data-target="#order"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
 
